api contract + views refactor
