# docs/api.yaml
@@ -1377,13 +1377,28 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RuleEvaluateResponse'
-              examples:
-                success:
-                  summary: Rules matched
-                  value:
-                    device_id: 999
-                    trigger_telemetry_id: 99
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  results:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/RuleEvaluationResult'
+              example:
+                status: 200
+                results:
+                  - telemetry_id: 2
+                    device_metric_id: 1
+                    device_name: "device 1"
+                    result:
+                      telemetry_id: 2
+                      results:
+                        - rule_id: 1
+                          triggered: true
+                        - rule_id: 4
+                          triggered: true        
         '400':
           description: Invalid request
           content:
@@ -1955,10 +1970,6 @@ components:
       type: object
       description: Business logic rule for monitoring and alerting
       properties:
-        schema_version:
-          type: integer
-          description: Version of the rule schema definition
-          example: 1
         id:
           type: integer
           example: 111
@@ -2275,72 +2286,99 @@ components:
         rule_id: 12
         device_id: 5
 
-    RuleEvaluateResponse:
+    RuleEvaluationResult:
       type: object
       properties:
-        rules_evaluated:
+        telemetry_id:
           type: integer
-          example: 15
-        events_created:
+          example: 101
+        device_metric_id:
           type: integer
-          example: 3
-        evaluation_time_ms:
+          example: 5
+        device_name:
+          type: string
+          example: "Temperature Sensor"
+        result:
+          $ref: '#/components/schemas/RuleProcessorOutput'
+      example:
+        telemetry_id: 2
+        device_metric_id: 1
+        device_name: "device 1"
+        result:
+          telemetry_id: 2
+          results:
+            - rule_id: 1
+              triggered: true
+
+    RuleProcessorOutput:
+      type: object
+      properties:
+        telemetry_id:
           type: integer
-          example: 245
-        events:
+          example: 2
+        results:
           type: array
           items:
-            $ref: '#/components/schemas/Event'
+            $ref: '#/components/schemas/IndividualRuleResult'
       example:
-        rules_evaluated: 15
-        events_created: 3
-        evaluation_time_ms: 245
-        events:
-          - id: 1
-            rule_id: 12
-            device_metric_id: 1
-            created_at: "2026-02-20T12:00:00Z"
-            timestamp: "2026-02-20T12:00:00Z"
+        telemetry_id: 2
+        results:
+          - rule_id: 1
+            triggered: true      
 
-    Event:
+    IndividualRuleResult:
       type: object
-      description: Rule evaluation event (rule firing)
       properties:
-        id:
-          type: integer
-          example: 11
         rule_id:
           type: integer
-          example: 66
-        acknowledged:
+          example: 1
+        triggered:
           type: boolean
-          example: false
-        timestamp:
-          type: string
-          format: date-time
-          example: "2026-01-22T16:30:00Z"
-        created_at:
-          type: string
-          format: date-time
-          example: "2026-01-22T16:31:00Z"
-        trigger_telemetry_id:
-          type: integer
-          nullable: true
-          example: 11
-      required:
-        - id
-        - rule_id
-        - timestamp
-        - created_at
+          example: true
       example:
-        id: 1
         rule_id: 1
-        acknowledged: false
-        timestamp: "2026-01-22T16:30:00Z"
-        created_at: "2026-01-22T16:31:00Z"
-        trigger_telemetry_id: 1
+        triggered: true    
+    
+    # NOTE: for future usage
+    # Event:
+    #   type: object
+    #   description: Rule evaluation event (rule firing)
+    #   properties:
+    #     id:
+    #       type: integer
+    #       example: 11
+    #     rule_id:
+    #       type: integer
+    #       example: 66
+    #     acknowledged:
+    #       type: boolean
+    #       example: false
+    #     timestamp:
+    #       type: string
+    #       format: date-time
+    #       example: "2026-01-22T16:30:00Z"
+    #     created_at:
+    #       type: string
+    #       format: date-time
+    #       example: "2026-01-22T16:31:00Z"
+    #     trigger_telemetry_id:
+    #       type: integer
+    #       nullable: true
+    #       example: 11
+    #   required:
+    #     - id
+    #     - rule_id
+    #     - timestamp
+    #     - created_at
+    #   example:
+    #     id: 1
+    #     rule_id: 1
+    #     acknowledged: false
+    #     timestamp: "2026-01-22T16:30:00Z"
+    #     created_at: "2026-01-22T16:31:00Z"
+    #     trigger_telemetry_id: 1
 
-# NOTE: for future usage
+
     # PaginatedEvents:
     #   type: object
     #   properties:
